# cc-test

./: README.md  cc-test.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
test/: LibSpec.hs
