name:                cc-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/cc-test
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco@gmail.com
copyright:           2020 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , case-insensitive
                     , containers
                       -- DEBUG
                     , hedgehog

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LibSpec.hs
  build-depends:       base
                     , case-insensitive
                     , cc-test
                     , hedgehog
                     -- , hspec
                     -- , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/cc-test
